# forester

./: .gitignore  .project  GSDI.md  PhyloBioRuby.md  ProjectHome.md  README.md  RIO.md  RubyExamples.md  forester.md  genetreepreprocessing.md  pom.xml
forester/: .classpath  .gitignore  .project  bashrc_example_entries
forester/aptx/: aptx.bat
forester/aptx/aptx_configuration_files/: _aptx_configuration_file  _aptx_configuration_file_1
forester/aptx/aptx_example_files/: 0_test_1.xml  AtNBSpos.nhx  BLAST_examples.xml  CLC.nhx  Legh_expr1.nhx  M1001.NX  Tree_of_Life_2382_green_plants.xml  Tree_of_Life_2461_with_detailed_taxonomy_data.phylo.xml  amphi_frost.phyloxml  amphi_frost.xml  apaf_expression.tab  apaf_with_vector_data.xml  bcl2_pfam_seqs.xml  bcl_2.xml  bracket_support.nh  branch_widths.xml  cu_zn_superoxide_dismutase.nex  demo_colors.nhx  demo_colors_and_widths.nhx  demo_colors_and_widths.xml  demo_custom1.nhx  demo_custom2.nhx  domains1.nhx  internal_name_support.nh  multi_species_1.nhx  multifurcations_ex_1.nhx  multifurcations_ex_2.nhx  multifurcations_ex_3.nhx  multifurcations_ex_4.nhx  multiple_support.xml  phyloxml_examples_1.xml  phyloxml_seq_annotation.xml  seq_colors_with_species_and_annotations.xml  seqs.xml  seqs2.xml  seqs3.xml  single_descendants.xml  singlet.xml  species_extraction_pfam.nh  species_extraction_yes.nh  (+9 more)
forester/archive/: forester-1.92.tar.Z
forester/archive/Applets/: ArchaeopteryxE.txt  MainFrameApplet.txt
forester/archive/RIO/: COPYRIGHT  RIO_INSTALL  tree_of_life_bin_1-4.nhx
forester/archive/RIO/C/: Makefile  bootstrap_cz.c
forester/archive/RIO/others/puzzle_dqo/src/: Makefile  Makefile.am  Makefile.in  gamma.c  gamma.h  ml.h  ml1.c  ml2.c  ml3.c  model2.c  outdist  ppuzzle.h  puzzle1.c  puzzle2.c  test  test.in  util.c
forester/archive/RIO/others/puzzle_mod/: IMPORTANT_NOTICE  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  mkinstalldirs
forester/archive/RIO/others/puzzle_mod/data/: Makefile  Makefile.in
forester/archive/RIO/others/puzzle_mod/doc/: Makefile  Makefile.am  Makefile.in
forester/archive/RIO/others/puzzle_mod/src/: 00README  Makefile  Makefile.am  Makefile.in  README  ml.h  ml1.c  ml2.c  model1.c  ppuzzle.c  puzzle.h  puzzle1.c  puzzle2.c  sched.c  sched.h  util.c  util.h
forester/archive/perl/: 00README  Xrio.pl  bootstrapCounter.pl  bootstrapSelector.pl  bootstrap_cz.pl  countSpeciesSPTrEMBL.pl  extractSWISS-PROT.pl  extractSpecies.pl  extractTrembl.pl  file_proc.pl  forester.pm  gs_aa_extract.pl  makeTree.pl  mt.pl  multifetch.pl  nph-riowebserver  p7extract.pl  pfam2pwd.pl  pfam2slx.pl  queue.pm  rio.pl  rio_module.pm  rio_slave.pl  rio_slave_driver.pl  xt.pl
forester/data/: Pfam_A_full_22_table.bz2  Pfam_A_full_22_to_SCOP_2008_06_25_SCOP_2_CLASS.bz2  Pfam_A_full_22_to_SCOP_2008_06_25_SCOP_3_FOLD.bz2  Pfam_A_full_22_to_SCOP_2008_06_25_SCOP_4_SUPERFAMILY.bz2  Pfam_A_full_22_to_SCOP_2008_06_25_SCOP_5_FAMILY.bz2  Pfam_ls_22_GA2.bz2  Pfam_ls_22_NC2.bz2  Pfam_ls_22_TC2.bz2  sp_speclist_ext.txt  tol_102.xml  tol_117.xml  tol_143.xml  tol_144.xml  tol_145.xml  tol_146.xml  tol_147.xml  tol_148.xml  tol_149.xml  tol_150.xml  tol_151.xml  tol_152.xml  tol_153.xml  tol_154.xml  tol_156.xml  tol_173.xml  tol_173_no_ecdy.xml  tol_335.xml  tol_336.xml  tol_336_traditional_metazoans.xml
forester/data/surfacing/: Pfam_270_GA1  Pfam_270_NC1  Pfam_270_TC1  genome_locations.txt  genome_locations_eos.txt  genomes_all.txt  genomes_eos_all.txt  glycogen_domains.txt  pfam2go.txt  pfam2go_130621.txt  pfam2go_2009_04_23  tf_1.txt  viral_domains.txt
forester/docs/: eclipse_help.txt
forester/examples/rio/: gene_trees_rio.nh
forester/java/: build.xml
forester/java/classes/resources/: phyloxml.xsd  synth_look_and_feel_1.xml
forester/java/eclipse/: forester_java_format.xml  forester_java_profile.xml  sg_java_format.xml  sg_java_profile.xml
forester/perl/: forester.pm  pf_cutoff_extract.pl  phylo_pl.pl
forester/perl/test_files/: aa.phylip  na.phylip
forester/phyloxml/docs/version_0.90/: phyloxml.xsd.html
forester/phyloxml/docs/version_1.00/: phyloxml.xsd.html
forester/phyloxml/oxygen/: phyloxml_oxygen_project.xpr  phyloxml_to_html_xslt.xml
forester/python/: clad_sum.py  surfacing_table_reformat.py
forester/ruby/: 00_README.txt
forester/ruby/rubytools/: phylogenetics.rb  run_mafft.rb
forester/ruby/scripts/: clean_fasta.rb  copy.rb  delete_ext_nodes.rb  do_something.rb  ensembl_ftp.rb  g.rb  gl.rb  hmm_split.rb  mv_slinks.rb  nffas_parse.rb  parameters.rb_dir_qsub  pfam2go_reformat.rb  pfam_summarize.rb  pfam_to_scop.rb  preprocess.rb  rb_dir_qsub.rb  rb_dir_x.rb  rb_qsub.rb  replace.rb  replace_id.rb  scoptastic.rb  x.rb
forester/sh/: mkdeco.sh  mktree.sh  ref_phylo_pl.sh  rss_cdhit.sh  seq_selection.sh  x.sh  x_blast_pars.sh  x_cdhit.sh  x_dsx.sh  x_genscan.sh  x_hmmscan.sh  x_hmmscan_sog.sh  x_hsp_d2f.sh  x_mafft.sh  x_mpp.sh  x_msa_pro.sh  x_phylo.sh  x_phylo_pl.sh  x_synsor.sh  x_tap.sh
forester/test_data/: Bcl-2_e1_20_mafft_05_40_fme.mlt  Bcl-2_e1_20_mafft_05_40_fme.xml  Bininda-emonds_2007_mammals.nex  S14117.nex  S15613.nex  T4816.nex  Westneat_Lundberg_BigFishTree.nex  amphi_frost.xml  basics.nh  bcl.aln  chars.nex  chars.nh  chars.xml  clade_analysis_test_1.xml  clade_analysis_test_2.xml  fasta_0.fasta  gene_tree_1.xml  gene_tree_2.xml  gene_tree_tax_code_4.xml  gsdi_test_gene_tree_ids.xml  gsdi_test_gene_tree_sn.xml  gsdi_test_gene_tree_sn_wnt.xml  gsdi_test_species_tree.xml  gsdi_test_species_tree_codes.nh  gsdi_test_species_tree_codes.xml  gsdi_test_species_tree_ids.xml  gsdi_test_species_tree_sn.nh  gsdi_test_species_tree_sn.xml  hmmpfam_output  hmmpfam_output2  hmmpfam_output3  hmmpfam_output_short  hmmscan30b3_output_1  hmmscan30b3_output_2  mafft.nh  midpoint_rooting_neg_bl.nh  msa_1.txt  msa_2.txt  msa_3.txt  ncbi.fasta  (+47 more)
forester_applications/: .classpath  .project
src/main/resources/: phyloxml.xsd
wiki/: Archaeopteryx.wiki  GSDI.wiki  PhyloBioRuby.wiki  RIO.wiki  RubyExamples.wiki  forester.wiki  genetreepreprocessing.wiki  rio.wiki
(+1167 files in other folders)
