
dnl Disable caching.
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ml.h)

AM_INIT_AUTOMAKE(tree-puzzle, 5.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET


AC_DEFUN(AC_TEST_MPICC,[dnl
 if test  "$1" != ""  ; then
 if test  "$MPICCSET" = ""  ; then
cat > conftest.c <<EOF
#include<mpi.h>
int main (int argc, char **argv)
{
MPI_Init(&argc,&argv);
MPI_Finalize();
exit(0);
}
EOF


MPICC=$1
dnl if test  "$MPICC" != "$CC"  ; then
dnl   
dnl fi

 if test  "$MPICC" != ""  ; then
    AC_MSG_CHECKING(whether $MPICC works as MPI compiler)
    $MPICC conftest.c -o conftest > /dev/null 2>&1
    if test $? = 0 ; then
        AC_MSG_RESULT(yes)
        #MPICC=$MPICC
        MPILIBS=
        MPICCSET=$MPICC
        PPUZZLE=ppuzzle
    else
        AC_MSG_RESULT(no)
        AC_MSG_CHECKING(whether $MPICC needs -lmpi)
        $MPICC conftest.c -o conftest -lmpi > /dev/null 2>&1
        if test $? = 0 ; then
            AC_MSG_RESULT(yes)
            #MPICC=$PCC
            MPILIBS=-lmpi
            MPICCSET=$MPICC
            PPUZZLE=ppuzzle
        else
            AC_MSG_RESULT(no)
            MPICC=
            MPILIBS=
            MPICCSET=
            PPUZZLE=
        fi
    fi
  fi
  rm -f conftest*
 fi
 fi ])

if test  "$MPICC" != ""  ; then
  AC_PATH_PROG(MPICC0, $MPICC)
fi
AC_PATH_PROG(MPICC1, mpcc)
AC_PATH_PROG(MPICC2, hcc)
AC_PATH_PROG(MPICC3, mpicc)
AC_PATH_PROG(MPICC4, mpicc_lam)
AC_PATH_PROG(MPICC5, mpicc_mpich)

AC_TEST_MPICC($MPICC0)
AC_TEST_MPICC($MPICC1)
AC_TEST_MPICC($MPICC2)
AC_TEST_MPICC($MPICC3)
AC_TEST_MPICC($MPICC4)
AC_TEST_MPICC($MPICC5)

ac_cv_prog_MPICC=$MPICC

AC_SUBST(MPICC)
AC_SUBST(MPILIBS)
AC_SUBST(MPIDEFS)
AC_SUBST(MPICFLAGS)
AC_SUBST(PPUZZLE)

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl AC_CHECK_LIB(mpi, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)
dnl AC_HAVE_HEADERS(mpi.h)

dnl AC_HAVE_HEADERS(rpc/xdr.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
dnl AC_CHECK_FUNCS(xdr_u_char)
dnl AC_CHECK_FUNCS(xdr_double)
dnl AC_CHECK_FUNCS(xdrstdio_create)
dnl AC_CHECK_FUNCS(xdr_destroy)
dnl AC_CHECK_FUNCS(xdr_inline)

AC_OUTPUT(Makefile src/Makefile src/test doc/Makefile data/Makefile)
